# arc-agent-commerce

./: .env.example  .gitignore  BUILDERS_FUND.md  DEMO_SCRIPT.md  README.md  foundry.toml
docs/: INTEGRATING.md
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
indexer/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  ponder.config.ts  ponder.schema.ts  tsconfig.json
script/: Deploy.legacy.s.sol  Deploy.s.sol  DeployProxy.s.sol  DeployStreamEscrow.s.sol  DeployV3.s.sol  FixEscrow.s.sol  Upgrade.s.sol
scripts/: VPS_RUNBOOK.md  check_state.py  demo_streaming.py  flagship_demo.py  populate_marketplace.py
sdk/: README.md  pyproject.toml
sdk-ts/: README.md  package-lock.json  package.json  tsconfig.json
sdk/examples/: .env.example  browse_services.py  demo.py  demo_ui.py  e2e_testnet.py  full_demo.py  hire_agent.py  langchain_tool.py  pipeline_demo.py
sdk/src/arc_commerce/: __init__.py  async_client.py  client.py  constants.py  errors.py  langchain.py  types.py
sdk/src/arc_commerce/abi/: CommerceHook.json  PipelineOrchestrator.json  ServiceEscrow.json  ServiceMarket.json  StreamEscrow.json  __init__.py  identity_registry.json  spending_policy.json
sdk/tests/: conftest.py  test_async_client.py  test_client.py  test_errors.py  test_identity_operations.py  test_pipeline_types.py  test_policy_operations.py  test_read_operations.py  test_retry.py  test_write_operations.py
src/: AgentPolicy.sol  CommerceHook.sol  PipelineOrchestrator.sol  ServiceEscrow.sol  ServiceMarket.sol  SpendingPolicy.sol  StreamEscrow.sol
(+106 files in other folders)
