[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc-commerce"
version = "0.1.0"
description = "Python SDK for Agent Commerce Protocol on Arc Network"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "web3>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
